IT'S WORKINGgit status Registration and Login functionality are working for the patient branch. Can reach PatientDashboard.js through a PrivateRoutegit status

--- a/cardea/src/index.css
+++ b/cardea/src/index.css
@@ -15,5 +15,11 @@ code {
 .main-register-container {
   display: flex;
   flex-direction: column;
+  padding: 0px;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
   padding: 50px;
 }
