Adds medProfRegister.js code, info .posts and pushes to  but the got a 500 internal server error

--- a/cardea/src/index.css
+++ b/cardea/src/index.css
@@ -13,8 +13,11 @@ code {
 }
 
 .main-register-container {
+  margin-top: 20px;
+  min-width: 800px;
   display: flex;
   flex-direction: column;
+  align-items: space-between;
   padding: 0px;
 }
 
@@ -22,4 +25,24 @@ code {
   display: flex;
   flex-direction: column;
   padding: 50px;
+}
+
+.registration-buttons {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin: 20px;
+  display: flex;
+  align-items: space-between;
+  justify-content: space-evenly;
+
+}
+
+.link-button {
+  padding: 50px 20px;
+  box-shadow: 10px 10px 5px grey;
+  text-decoration: none;
+  width: 200px;
+  height: 100px;
+  align-content: center;
+  border-radius: 10px;
 }
